<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Music Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonPlayPauseContentDescription">Play and Pause Button</string>
    <string name="buttonStopContentDescription">Stop Button</string>
    <string name="buttonFastForwardContentDescription">Fast-Forward Button</string>
    <string name="buttonRewindContentDescription">Rewind Button</string>
    <string name="buttonRepeatContentDescription">Repeat Button</string>
    <string name="buttonReplayContentDescription">Replay Button</string>

</resources>